# AgentProf

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
agentprof/: __init__.py  cli.py  config.py
agentprof/analyze/: __init__.py  multi_agent_waste.py  retry_loop.py  schema.py  spec_violation.py
agentprof/cost/: __init__.py  runner.py  schema.py
agentprof/ingest/: __init__.py  langfuse_export.py
agentprof/normalize/: __init__.py  langfuse.py  runner.py  schema.py
agentprof/privacy/: __init__.py  hashing.py  redactor.py
agentprof/report/: __init__.py  runner.py  schema.py
agentprof/store/: __init__.py  duckdb_store.py
docs/: html-report-scope.md
tests/: test_cli.py  test_config.py  test_cost.py  test_langfuse_export_import.py  test_multi_agent_waste.py  test_normalize.py  test_privacy_hashing.py  test_privacy_redactor.py  test_report.py  test_retry_loop.py  test_spec_violation.py  test_store.py
tests/fixtures/: langfuse_multi_agent_observations.json  langfuse_observations.csv  langfuse_observations.json
